fixed library loading steps